@@ -31,6 +31,7 @@ Designer 2.14.0 (2012-08-XX Markab)
      has non-default zoom
    - MODELER-399: Order of windows
    - MODELER-410: KNX import not working anymore
+   - MODELER-409: NPE on autosave from UI design
 
 Designer 2.13.6 (2012-09-20 Rosemary)
 =====================================
